@@ -1,5 +1,8 @@
 package tron.deployment.shellExecutor;
 
+import com.google.common.collect.Streams;
+import org.apache.commons.lang3.ArrayUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 
@@ -8,42 +11,42 @@ import java.io.File;
 import java.io.InputStreamReader;
 
 public class BashExecutor {
-    public void callScript(String script, String args, String... workspace){
-        try {
-            String cmd = "bash " + script + " " + args;
-//        	String[] cmd = {"sh", script, "4"};
-            File dir = null;
-            if(workspace[0] != null){
-                dir = new File(workspace[0]);
-//                File[] files = dir.listFiles();
-//                for(File file : files){
-//                    System.out.println(file.getName());
-//                }
-                System.out.println(workspace[0]);
-            }
-            String[] evnp = {"val=2", "call=Bash Shell"};
-            Process process = Runtime.getRuntime().exec(cmd);
-//            Process process = Runtime.getRuntime().exec(cmd, evnp, dir);
-//            process = Runtime.getRuntime().exec(cmd);
-            BufferedReader input = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            String line = "";
-            while ((line = input.readLine()) != null) {
-                System.out.println(line);
-            }
-            input.close();
-        }
-        catch (Exception e){
-            e.printStackTrace();
-        }
-    }
 
-    public void callDeployScript(){
+
+    public void callScript(String ip, Long port, String userName, String path, String privateKey){
         try {
-//            String s = this.getClass().getClassLoader().getResource("").getPath();
+
             Resource resource = new ClassPathResource("deploy.bash");
             File script =resource.getFile();
-            String cmd = "bash " + script.getAbsolutePath();
-            Process process = Runtime.getRuntime().exec(cmd);
+            String[] cmdArray = {script.getAbsolutePath(), ip, port.toString(), userName, path};
+            if (privateKey.length() != 0) {
+                cmdArray = ArrayUtils.add(cmdArray, privateKey);
+            }
+            cmdArray = ArrayUtils.add(cmdArray, ">> result.log");
+            String cmd = StringUtils.join(cmdArray, " ");
+            Runtime.getRuntime().exec(new String[]{"bash", "-c", cmd});
+//            Process process = Runtime.getRuntime().exec(cmd, evnp, dir);
+//            process = Runtime.getRuntime().exec(cmd);
+//            BufferedReader input = new BufferedReader(new InputStreamReader(process.getInputStream()));
+//            String line = "";
+//            while ((line = input.readLine()) != null) {
+//                System.out.println(line);
+//            }
+//            input.close();
+        }
+        catch (Exception e){
+            e.printStackTrace();
+        }
+    }
+
+    public void callDeployScript(String ip, Long port, String userName, String path){
+        try {
+            Resource resource = new ClassPathResource("deploy.bash");
+            File script =resource.getFile();
+            String[] cmd = {"bash", script.getAbsolutePath(), ip, port.toString(), userName, path};
+            ProcessBuilder processBuilder = new ProcessBuilder(cmd);
+            processBuilder.redirectErrorStream(true);
+            Process process = processBuilder.start();
             BufferedReader input = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String line = "";
             while ((line = input.readLine()) != null) {
@@ -56,14 +59,17 @@ public class BashExecutor {
         }
     }
 
-    public void callBuildScript(){
+    public void callScript2(String ip, Long port, String userName, String path, String privateKey){
         try {
-//            String s = this.getClass().getClassLoader().getResource("").getPath();
-            Resource resource = new ClassPathResource("build.bash");
+            Resource resource = new ClassPathResource("deploy.bash");
             File script =resource.getFile();
-            String cmd = "bash " + script.getAbsolutePath();
-            System.out.println(cmd);
-            Process process = Runtime.getRuntime().exec(cmd);
+            String[] cmd = {"bash", script.getAbsolutePath(), ip, port.toString(), userName, path};
+            if (privateKey.length() != 0) {
+                ArrayUtils.add(cmd, privateKey);
+            }
+            ProcessBuilder processBuilder = new ProcessBuilder(cmd);
+            processBuilder.redirectErrorStream(true);
+            Process process = processBuilder.start();
             BufferedReader input = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String line = "";
             while ((line = input.readLine()) != null) {
@@ -75,12 +81,11 @@ public class BashExecutor {
             e.printStackTrace();
         }
     }
-
-    public void callBuildScript2(){
+    public void callBuildScript(String branch){
         try {
             Resource resource = new ClassPathResource("build.bash");
             File script =resource.getFile();
-            String[] cmd = {"bash", script.getAbsolutePath()};
+            String[] cmd = {"bash", script.getAbsolutePath(), branch};
             ProcessBuilder processBuilder = new ProcessBuilder(cmd);
             processBuilder.redirectErrorStream(true);
             Process process = processBuilder.start();
@@ -99,7 +104,6 @@ public class BashExecutor {
     public static void main(String[] args) {
         // TODO Auto-generated method stub
         BashExecutor call = new BashExecutor();
-        call.callBuildScript2();
-//        call.callScript("deploy.bash", "", "./");
+        call.callBuildScript("");
     }
 }
